--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Kabacoff.GitHub.io</h1>
-      <h2 class="project-tagline">Rob Kabacoff, Ph.D.</h2>
+      <h1 class="project-name">Rob Kabacoff, Ph. D.</h1>
+      <h2 class="project-tagline">R Projects.</h2>
     </section>
 
     <section class="main-content">
